# ShiftIt

./: .gitignore  README.md  fabfile.py  pyproject.toml
.claude/: settings.local.json
ShiftIt/: BUILD_ERROR_FIXES.md  KeyboardShortcutRecorder.swift  ModernSwiftExample.swift  ModernWindowDriver.swift  ModernWindowDriverTests.swift  PreferencesWindowController.h  PreferencesWindowController.m  SETUP_GUIDE.md  SIAdjacentRectangles.m  SIScreen.h  SIWindowInfo.h  SIWindowManager.m  ShiftIt-Bridging-Header.h  ShiftIt-Info.plist  ShiftItAppDelegate.h  ShiftItAppDelegate.m  WindowManagerExample.swift
ShiftIt/.claude/: settings.local.json
ShiftIt/FMT/: FMTDefines.h  FMTHotKey+SRKeyCombo.h  FMTHotKey+SRKeyCombo.m  FMTHotKey.m  FMTHotKeyManager.m  FMTLoginItems.m  FMTNSDate+Extras.m  FMTUtils.m
ShiftIt/GTM/: GTMGarbageCollection.h
ShiftIt/ShiftIt Tests/: SIAdjacentRectanglesTest.m
ShiftIt/ShiftIt.xcodeproj/: KEYBOARD_SHORTCUT_INTEGRATION.md  KeyboardShortcutRecorder.swift  MenuBarController.swift  PreferencesController.swift  README_BUILD_FIX.md  ShiftIt-Bridging-Header.h  ShiftItApp.swift  ShortcutRecorderStubs.h  ShortcutRecorderStubs.m  SimpleTests.swift  VISUAL_CHECKLIST.md  WindowManagerPreferences.swift  XCODE_BUILD_SETTINGS.md  project.pbxproj
ShiftIt/ShiftIt.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ShiftIt/ShiftIt.xcodeproj/xcshareddata/xcschemes/: FMT Tests.xcscheme  ShiftIt NoX11.xcscheme  ShiftIt.xcscheme
release/: appcast.xml  build-release.sh  release-notes-2.0.0.html
