[project]
name = "shiftit-tools"
version = "0.1.0"
description = "Build and release tools for ShiftIt"
requires-python = ">=3.8.1"

dependencies = [
    "asn1crypto>=1.0.0",
    "bcrypt>=4.0.0",
    "certifi>=2023.0.0",
    "cffi>=1.15.0",
    "chardet>=5.0.0",
    "cryptography>=3.4.8",
    "fabric>=3.0.0",
    "github3.py>=3.0.0,<4.0.0",
    "idna>=3.0",
    "paramiko>=3.0.0",
    "pyasn1>=0.5.0",
    "pycparser>=2.21",
    "pynacl>=1.5.0",
    "pystache>=0.6.0",
    "requests>=2.31.0",
    "uritemplate>=4.0.0",
    "urllib3>=2.0.0",
    "sh>=2.0.0",
]
